--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "test": "mocha -R spec src/**/*.spec.js",
+    "postinstall": "node_modules/.bin/bower install",
     "bowerInstall": "bower install",
     "bowerInstallDocker": "bower install --allow-root"
   },
